--- a/kmtmg/en.lproj/MainMenu.xib
+++ b/kmtmg/en.lproj/MainMenu.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1070</int>
-		<string key="IBDocument.SystemVersion">11C40</string>
+		<int key="IBDocument.SystemTarget">1060</int>
+		<string key="IBDocument.SystemVersion">10K549</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
-		<string key="IBDocument.AppKitVersion">1138.16</string>
-		<string key="IBDocument.HIToolboxVersion">567.00</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string key="NS.object.0">1934</string>
@@ -578,7 +578,6 @@
 				<object class="NSMutableString" key="NSViewClass">
 					<characters key="NS.bytes">View</characters>
 				</object>
-				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="902772811">
 					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -1073,9 +1072,8 @@
 					<string key="NSFrameSize">{1120, 240}</string>
 					<reference key="NSNextKeyView" ref="93251445"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
-				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
-				<bool key="NSWindowIsRestorable">YES</bool>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
 			<object class="NSCustomObject" id="775313462">
 				<string key="NSClassName">ToolBarController</string>
@@ -1094,9 +1092,8 @@
 				<string key="NSWindowTitle">Information</string>
 				<string key="NSWindowClass">NSPanel</string>
 				<nil key="NSViewClass"/>
-				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="598321422">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">45</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSScrollView" id="323672519">
@@ -1569,7 +1566,7 @@
 											</array>
 											<string key="NSFrameSize">{112, 398}</string>
 											<reference key="NSSuperview" ref="584488400"/>
-											<reference key="NSNextKeyView" ref="404692156"/>
+											<reference key="NSNextKeyView" ref="640140612"/>
 										</object>
 									</array>
 									<string key="NSFrame">{{1, 1}, {127, 413}}</string>
@@ -1607,20 +1604,18 @@
 							</array>
 							<string key="NSFrame">{{-1, -1}, {129, 415}}</string>
 							<reference key="NSSuperview" ref="598321422"/>
-							<reference key="NSNextKeyView" ref="640140612"/>
-							<int key="NSsFlags">133122</int>
+							<reference key="NSNextKeyView" ref="584488400"/>
+							<int key="NSsFlags">2</int>
 							<reference key="NSVScroller" ref="640140612"/>
 							<reference key="NSHScroller" ref="974595848"/>
 							<reference key="NSContentView" ref="584488400"/>
 						</object>
 					</array>
 					<string key="NSFrameSize">{127, 413}</string>
-					<reference key="NSSuperview"/>
 					<reference key="NSNextKeyView" ref="323672519"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
-				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
-				<bool key="NSWindowIsRestorable">YES</bool>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
 			<object class="NSWindowTemplate" id="727678218">
 				<int key="NSWindowStyleMask">8219</int>
@@ -1630,7 +1625,6 @@
 				<string key="NSWindowTitle">Palette</string>
 				<string key="NSWindowClass">NSPanel</string>
 				<nil key="NSViewClass"/>
-				<nil key="NSUserInterfaceItemIdentifier"/>
 				<string key="NSWindowContentMaxSize">{1103, 272}</string>
 				<string key="NSWindowContentMinSize">{1103, 68}</string>
 				<object class="NSView" key="NSWindowView" id="182162199">
@@ -1650,7 +1644,6 @@
 											<int key="NSvFlags">16</int>
 											<string key="NSFrameSize">{1088, 68}</string>
 											<reference key="NSSuperview" ref="1015360736"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="967293488"/>
 											<string key="NSMinGridSize">{0, 0}</string>
 											<string key="NSMaxGridSize">{0, 0}</string>
@@ -1668,9 +1661,8 @@
 											<int key="NSDraggingSourceMaskForNonLocal">0</int>
 										</object>
 									</array>
-									<string key="NSFrameSize">{1103, 68}</string>
+									<string key="NSFrameSize">{1088, 68}</string>
 									<reference key="NSSuperview" ref="475060506"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="706218219"/>
 									<reference key="NSDocView" ref="706218219"/>
 									<object class="NSColor" key="NSBGColor">
@@ -1684,7 +1676,6 @@
 									<int key="NSvFlags">256</int>
 									<string key="NSFrame">{{1088, 0}, {15, 68}}</string>
 									<reference key="NSSuperview" ref="475060506"/>
-									<reference key="NSWindow"/>
 									<reference key="NSTarget" ref="475060506"/>
 									<string key="NSAction">_doScroller:</string>
 									<double key="NSCurValue">1</double>
@@ -1695,7 +1686,6 @@
 									<int key="NSvFlags">-2147483648</int>
 									<string key="NSFrame">{{-100, -100}, {233, 15}}</string>
 									<reference key="NSSuperview" ref="475060506"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="1015360736"/>
 									<int key="NSsFlags">1</int>
 									<reference key="NSTarget" ref="475060506"/>
@@ -1705,9 +1695,8 @@
 							</array>
 							<string key="NSFrameSize">{1103, 68}</string>
 							<reference key="NSSuperview" ref="182162199"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1015360736"/>
-							<int key="NSsFlags">133136</int>
+							<int key="NSsFlags">16</int>
 							<reference key="NSVScroller" ref="140103200"/>
 							<reference key="NSHScroller" ref="967293488"/>
 							<reference key="NSContentView" ref="1015360736"/>
@@ -1716,17 +1705,15 @@
 					</array>
 					<string key="NSFrameSize">{1103, 68}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="475060506"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
 				<string key="NSMinSize">{1103, 87}</string>
 				<string key="NSMaxSize">{1103, 291}</string>
-				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
 			<object class="NSCollectionViewItem" id="176694532"/>
 			<object class="NSView" id="538059832">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">4096</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="NSImageView" id="37746462">
@@ -1755,6 +1742,7 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{34, 34}</string>
+				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="37746462"/>
 			</object>
 			<object class="NSArrayController" id="901516098">
@@ -3658,9 +3646,8 @@
 				<string key="632.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="633.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="636.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="656.CustomClassName">MyImageCell</string>
+				<string key="656.CustomClassName">MyPaletteCell</string>
 				<string key="656.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="657.CustomClassName">MyImageView</string>
 				<string key="657.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="660.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="661.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3730,14 +3717,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MyDrawButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">MyImageCell</string>
-					<string key="superclassName">NSImageView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MyImageCell.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
@@ -3851,6 +3830,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MyPalette.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MyPaletteCell</string>
+					<string key="superclassName">NSImageView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MyPaletteCell.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
