--- a/kmtmg/en.lproj/MyDocument.xib
+++ b/kmtmg/en.lproj/MyDocument.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1070</int>
-		<string key="IBDocument.SystemVersion">11C40</string>
+		<int key="IBDocument.SystemTarget">1060</int>
+		<string key="IBDocument.SystemVersion">10K549</string>
 		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
-		<string key="IBDocument.AppKitVersion">1138.16</string>
-		<string key="IBDocument.HIToolboxVersion">567.00</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			<string key="NS.object.0">1934</string>
@@ -48,7 +48,6 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyWindow</string>
 				<string key="NSViewClass">View</string>
-				<nil key="NSUserInterfaceItemIdentifier"/>
 				<string key="NSWindowContentMinSize">{320, 240}</string>
 				<object class="NSView" key="NSWindowView" id="568628114">
 					<reference key="NSNextResponder"/>
@@ -221,20 +220,20 @@
 																				<object class="NSCustomView" id="465732959">
 																					<reference key="NSNextResponder" ref="615534696"/>
 																					<int key="NSvFlags">274</int>
-																					<string key="NSFrameSize">{426, 419}</string>
+																					<string key="NSFrameSize">{415, 408}</string>
 																					<reference key="NSSuperview" ref="615534696"/>
 																					<reference key="NSWindow"/>
-																					<reference key="NSNextKeyView" ref="1031482229"/>
+																					<reference key="NSNextKeyView" ref="303982887"/>
 																					<string key="NSClassName">MyView</string>
 																				</object>
 																			</array>
-																			<string key="NSFrameSize">{426, 419}</string>
+																			<string key="NSFrameSize">{415, 408}</string>
 																			<reference key="NSSuperview" ref="115432387"/>
 																			<reference key="NSWindow"/>
 																			<reference key="NSNextKeyView" ref="465732959"/>
 																		</object>
 																	</array>
-																	<string key="NSFrameSize">{426, 419}</string>
+																	<string key="NSFrameSize">{415, 408}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
 																	<reference key="NSWindow"/>
 																	<reference key="NSNextKeyView" ref="615534696"/>
@@ -253,10 +252,10 @@
 																<object class="NSScroller" id="303982887">
 																	<reference key="NSNextResponder" ref="245208161"/>
 																	<int key="NSvFlags">256</int>
-																	<string key="NSFrame">{{415, 0}, {11, 413}}</string>
+																	<string key="NSFrame">{{415, 0}, {11, 408}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
 																	<reference key="NSWindow"/>
-																	<reference key="NSNextKeyView" ref="276230304"/>
+																	<reference key="NSNextKeyView" ref="1031482229"/>
 																	<int key="NSsFlags">256</int>
 																	<reference key="NSTarget" ref="245208161"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -266,10 +265,10 @@
 																<object class="NSScroller" id="1031482229">
 																	<reference key="NSNextResponder" ref="245208161"/>
 																	<int key="NSvFlags">256</int>
-																	<string key="NSFrame">{{0, 408}, {420, 11}}</string>
+																	<string key="NSFrame">{{0, 408}, {415, 11}}</string>
 																	<reference key="NSSuperview" ref="245208161"/>
 																	<reference key="NSWindow"/>
-																	<reference key="NSNextKeyView" ref="303982887"/>
+																	<reference key="NSNextKeyView" ref="276230304"/>
 																	<int key="NSsFlags">257</int>
 																	<reference key="NSTarget" ref="245208161"/>
 																	<string key="NSAction">_doScroller:</string>
@@ -280,7 +279,7 @@
 															<reference key="NSSuperview" ref="771364648"/>
 															<reference key="NSWindow"/>
 															<reference key="NSNextKeyView" ref="115432387"/>
-															<int key="NSsFlags">133168</int>
+															<int key="NSsFlags">48</int>
 															<reference key="NSVScroller" ref="303982887"/>
 															<reference key="NSHScroller" ref="1031482229"/>
 															<reference key="NSContentView" ref="115432387"/>
@@ -299,10 +298,10 @@
 														<object class="NSButton" id="717106582">
 															<reference key="NSNextResponder" ref="276230304"/>
 															<int key="NSvFlags">260</int>
-															<string key="NSFrame">{{32, 127}, {32, 32}}</string>
+															<string key="NSFrame">{{32, 128}, {32, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
 															<reference key="NSWindow"/>
-															<reference key="NSNextKeyView" ref="452081562"/>
+															<reference key="NSNextKeyView" ref="689508025"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="569953613">
 																<int key="NSCellFlags">-2080244224</int>
@@ -321,13 +320,13 @@
 														<object class="NSButton" id="731023500">
 															<reference key="NSNextResponder" ref="276230304"/>
 															<int key="NSvFlags">260</int>
-															<string key="NSFrame">{{0, 127}, {32, 32}}</string>
+															<string key="NSFrame">{{0, 128}, {32, 32}}</string>
 															<reference key="NSSuperview" ref="276230304"/>
 															<reference key="NSWindow"/>
-															<reference key="NSNextKeyView" ref="689508025"/>
+															<reference key="NSNextKeyView" ref="717106582"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSButtonCell" key="NSCell" id="455745425">
-																<int key="NSCellFlags">-2080244224</int>
+																<int key="NSCellFlags">-1543373312</int>
 																<int key="NSCellFlags2">134217728</int>
 																<string key="NSContents">TOP</string>
 																<reference key="NSSupport" ref="437221680"/>
@@ -354,7 +353,7 @@
 																			<string key="NSFrameSize">{488, 126}</string>
 																			<reference key="NSSuperview" ref="463231561"/>
 																			<reference key="NSWindow"/>
-																			<reference key="NSNextKeyView" ref="12926121"/>
+																			<reference key="NSNextKeyView" ref="452081562"/>
 																			<string key="NSMinGridSize">{0, 0}</string>
 																			<string key="NSMaxGridSize">{0, 0}</string>
 																			<int key="NSMaxNumberOfGridRows">0</int>
@@ -407,8 +406,8 @@
 															<string key="NSFrameSize">{490, 128}</string>
 															<reference key="NSSuperview" ref="276230304"/>
 															<reference key="NSWindow"/>
-															<reference key="NSNextKeyView" ref="463231561"/>
-															<int key="NSsFlags">133666</int>
+															<reference key="NSNextKeyView" ref="12926121"/>
+															<int key="NSsFlags">546</int>
 															<reference key="NSVScroller" ref="12926121"/>
 															<reference key="NSHScroller" ref="167522541"/>
 															<reference key="NSContentView" ref="463231561"/>
@@ -444,6 +443,7 @@
 											<string key="NSFrameSize">{0, 493}</string>
 											<reference key="NSSuperview" ref="452081562"/>
 											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView"/>
 											<string key="NSClassName">NSView</string>
 										</object>
 									</array>
@@ -467,10 +467,9 @@
 					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="532050384"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
 				<string key="NSMinSize">{320, 262}</string>
-				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
-				<bool key="NSWindowIsRestorable">NO</bool>
+				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
 			<object class="NSWindowTemplate" id="464546253">
 				<int key="NSWindowBacking">1</int>
@@ -479,7 +478,6 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
-				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="397099299">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -489,18 +487,15 @@
 							<int key="NSvFlags">274</int>
 							<string key="NSFrameSize">{202, 136}</string>
 							<reference key="NSSuperview" ref="397099299"/>
-							<reference key="NSWindow"/>
 							<string key="NSClassName">MyCursorView</string>
 						</object>
 					</array>
 					<string key="NSFrameSize">{202, 136}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="186698734"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
-				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
-				<bool key="NSWindowIsRestorable">NO</bool>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
 			<object class="NSWindowTemplate" id="456788506">
 				<int key="NSWindowBacking">1</int>
@@ -509,7 +504,6 @@
 				<string key="NSWindowTitle">Window</string>
 				<string key="NSWindowClass">MyLayerWindow</string>
 				<nil key="NSViewClass"/>
-				<nil key="NSUserInterfaceItemIdentifier"/>
 				<object class="NSView" key="NSWindowView" id="953402551">
 					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -525,21 +519,23 @@
 					<string key="NSFrameSize">{169, 125}</string>
 					<reference key="NSNextKeyView" ref="668234819"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {1366, 768}}</string>
-				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
-				<bool key="NSWindowIsRestorable">NO</bool>
+				<string key="NSScreenRect">{{0, 0}, {1280, 778}}</string>
+				<string key="NSMaxSize">{1e+13, 1e+13}</string>
 			</object>
 			<object class="NSCustomObject" id="796877042">
 				<string key="NSClassName">NSApplication</string>
 			</object>
+			<object class="NSCustomObject" id="582650971">
+				<string key="NSClassName">MyTopSsk</string>
+			</object>
 			<object class="NSCollectionViewItem" id="578116863"/>
 			<object class="NSView" id="817488943">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">256</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="NSImageView" id="751878084">
 						<reference key="NSNextResponder" ref="817488943"/>
-						<int key="NSvFlags">268</int>
+						<int key="NSvFlags">256</int>
 						<set class="NSMutableSet" key="NSDragTypes">
 							<string>Apple PDF pasteboard type</string>
 							<string>Apple PICT pasteboard type</string>
@@ -548,28 +544,31 @@
 							<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
 							<string>NeXT TIFF v4.0 pasteboard type</string>
 						</set>
-						<string key="NSFrame">{{-3, -3}, {126, 126}}</string>
+						<string key="NSFrameSize">{128, 128}</string>
 						<reference key="NSSuperview" ref="817488943"/>
+						<reference key="NSNextKeyView"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSImageCell" key="NSCell" id="364335529">
 							<int key="NSCellFlags">67239424</int>
 							<int key="NSCellFlags2">33554432</int>
 							<reference key="NSSupport" ref="437221680"/>
 							<int key="NSAlign">0</int>
-							<int key="NSScale">0</int>
+							<int key="NSScale">2</int>
 							<int key="NSStyle">2</int>
 							<bool key="NSAnimates">NO</bool>
 						</object>
 						<bool key="NSEditable">YES</bool>
 					</object>
 				</array>
-				<string key="NSFrameSize">{120, 120}</string>
+				<string key="NSFrameSize">{128, 128}</string>
+				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="751878084"/>
 			</object>
 			<object class="NSArrayController" id="674351445">
 				<array class="NSMutableArray" key="NSDeclaredKeys">
 					<string>image</string>
 				</array>
+				<string key="NSObjectClassName">NSDictionary</string>
 				<bool key="NSEditable">YES</bool>
 				<object class="_NSManagedProxy" key="_NSManagedProxy"/>
 				<bool key="NSAvoidsEmptySelection">YES</bool>
@@ -577,9 +576,6 @@
 				<bool key="NSSelectsInsertedObjects">YES</bool>
 				<bool key="NSFilterRestrictsInsertion">YES</bool>
 				<bool key="NSClearsFilterPredicateOnInsertion">YES</bool>
-			</object>
-			<object class="NSCustomObject" id="582650971">
-				<string key="NSClassName">MyTopSsk</string>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -801,14 +797,6 @@
 					<int key="connectionID">100113</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">itemPrototype</string>
-						<reference key="source" ref="906795404"/>
-						<reference key="destination" ref="578116863"/>
-					</object>
-					<int key="connectionID">100306</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">content: arrangedObjects</string>
 						<reference key="source" ref="906795404"/>
@@ -823,6 +811,14 @@
 						</object>
 					</object>
 					<int key="connectionID">100341</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">itemPrototype</string>
+						<reference key="source" ref="906795404"/>
+						<reference key="destination" ref="578116863"/>
+					</object>
+					<int key="connectionID">100306</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -873,14 +869,6 @@
 					<int key="connectionID">100338</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
-						<string key="label">collectionView</string>
-						<reference key="source" ref="582650971"/>
-						<reference key="destination" ref="906795404"/>
-					</object>
-					<int key="connectionID">100353</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
 						<string key="label">value: representedObject.image</string>
 						<reference key="source" ref="751878084"/>
@@ -894,7 +882,7 @@
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">100351</int>
+					<int key="connectionID">100360</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1341,6 +1329,7 @@
 				<string key="100317.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100323.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100325.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="100332.CustomClassName">MyTopSskCell</string>
 				<string key="100332.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="100333.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="NO" key="5.IBNSWindowAutoPositionCentersHorizontal"/>
@@ -1354,7 +1343,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100353</int>
+			<int key="maxID">100360</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1445,23 +1434,28 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="arrayController">NSArrayController</string>
-						<string key="collectionView">NSCollectionView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="arrayController">
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">arrayController</string>
+						<string key="NS.object.0">NSArrayController</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">arrayController</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
 							<string key="name">arrayController</string>
 							<string key="candidateClassName">NSArrayController</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="collectionView">
-							<string key="name">collectionView</string>
-							<string key="candidateClassName">NSCollectionView</string>
-						</object>
-					</dictionary>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/MyTopSsk.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MyTopSskCell</string>
+					<string key="superclassName">NSImageView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MyTopSskCell.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
